<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".LoginActivity" android:background="#FDFDFE">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/acloud"
                android:id="@+id/imageView"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/textView" app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintVertical_bias="0.0"/>

        <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="264dp"
                android:layout_height="296dp"
                android:orientation="vertical"
                android:padding="20dp"
                android:background="@color/darkgray"
                android:id="@+id/linearLayout" android:layout_marginTop="188dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/imageView2">
            <EditText
                    android:layout_width="208dp"
                    android:layout_height="40dp"
                    android:id="@+id/etNombre"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginVertical="5dp"
                    android:inputType="textPersonName"
                    android:hint="@string/nombre"
                    android:background="@color/azure"
                    android:padding="5dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.489"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/etPassword"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/button"/>

            <EditText
                    android:layout_width="208dp"
                    android:layout_height="40dp"
                    android:id="@+id/etCorreo"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginVertical="5dp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/correo"
                    android:background="@color/azure"
                    android:padding="5dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.489"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/etPassword"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/button"/>

            <EditText
                    android:layout_width="208dp"
                    android:layout_height="40dp"
                    android:id="@+id/etPassword"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginVertical="5dp"
                    android:inputType="text|textPassword"
                    android:hint="@string/password"
                    android:padding="5dp"
                    android:background="@color/azure"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                    android:layout_width="208dp"
                    android:layout_height="40dp"
                    android:id="@+id/etRepeatPassword"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginVertical="5dp"
                    android:inputType="text|textPassword"
                    android:hint="@string/repeatpassword"
                    android:padding="5dp"
                    android:background="@color/azure"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"/>

            <Button
                    android:layout_width="208dp"
                    android:layout_height="40dp"
                    android:id="@+id/btAceptar"
                    android:text="@string/crear"
                    android:background="#0096D7"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/button"
                    android:layout_marginBottom="34dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>

        </LinearLayout>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/amaqreserve"
                android:id="@+id/imageView2" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="480dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0"/>
        <TextView
                android:text="@string/registro"
                android:layout_width="168dp"
                android:layout_height="54dp"
                android:id="@+id/textView"
                android:layout_marginTop="120dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                android:textSize="40dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAllCaps="false"
                app:layout_constraintHorizontal_bias="0.493" app:layout_constraintBottom_toTopOf="@+id/txRegResult"
                app:layout_constraintVertical_bias="1.0" android:layout_marginBottom="8dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txRegResult" android:layout_marginTop="156dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout" app:layout_constraintVertical_bias="1.0"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>