<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".LoginActivity" android:background="#FDFDFE">

        <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toTopOf="@+id/txLogresult"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/acloud" />

        <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="265dp"
                android:layout_height="269dp"
                android:orientation="vertical"
                android:padding="20dp"
                android:background="@color/darkgray"
                android:id="@+id/linearLayout" android:layout_marginTop="188dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/imageView2">
            <EditText
                    android:layout_width="208dp"
                    android:layout_height="40dp"
                    android:id="@+id/etNombre"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginVertical="5dp"
                    android:inputType="textPersonName"
                    android:hint="@string/nombre"
                    android:background="@color/azure"
                    android:padding="5dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.489"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/etPassword"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/button"/>

            <EditText
                    android:layout_width="208dp"
                    android:layout_height="40dp"
                    android:id="@+id/etPassword"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginVertical="5dp"
                    android:inputType="text|textPassword"
                    android:hint="@string/password"
                    android:padding="5dp"
                    android:background="@color/azure"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"/>
            <Button
                    android:layout_width="208dp"
                    android:layout_height="40dp"
                    android:id="@+id/btInicio"
                    android:text="@string/iniciarsesion" android:background="#0097D8" android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="17dp"
                    app:layout_constraintTop_toBottomOf="@+id/etNombre"/>
            <Button
                    android:layout_width="208dp"
                    android:layout_height="40dp"
                    android:id="@+id/btRegistrarse"
                    android:text="@string/registrarse" android:background="#0096D7" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginTop="10dp"
                    android:layout_marginBottom="34dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>

        </LinearLayout>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/amaqreserve"
                android:id="@+id/imageView2" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="480dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txLogresult"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.993"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>